# sipz-nutrient-agent

./: .env.example  .gitignore  .npmignore  AGENTS.md  AI_BUILD_HANDOFF.md  MVP_IMPLEMENTATION_SPEC.md  README.md  SIPZ_NUTRIENT_RESEARCH_AGENT_PLAN.md  excluded_avg_nutriment_source_keys.csv  nutrient_health_effects_bulk_import_report.md  nutriment_dose_band_source_key_map_grouped.csv  nutriment_dose_band_table.csv  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
agent-home/: AGENTS.md  BLUEPRINT.md  SYSTEM.md  settings.json
agent-home/extensions/: literature-tools.ts  sipz-header.ts
docs/: architecture.md  artifact-format.md  evidence-grading.md
examples/: sample-session.md
python/scripts/: add_botanical_identities_to_lookup.py  apply_health_effect_aliases.py  avoid_existing_health_effect_conflicts.py  build_added_ingredient_research_mapping.py  build_added_ingredient_run_targets.py  build_combined_ingredient_research_mapping.py  build_ingredient_research_target_map.py  build_nutriment_dose_band_table.py  combine_internal_exports.py  create_botanical_review_queue.py  curate_bioactive_names.py  lookup_nutriment_evidence_matches.py  refactor_nutriment_dose_band_schema.py  reroute_beneficial_caution_effects.py  run_added_harmful_retrieval_rerun.sh  run_added_latest_claim_audit_batch_parallel.sh  run_added_latest_claims_batch_parallel.sh  run_harmful_unpaywall_followup.sh  run_ingredient_claim_audit_batch_parallel.sh  run_ingredient_claims_batch_parallel.sh  run_ingredient_retrieval_batch.sh  try_unpaywall_retrieval.py
python/tests/: test_added_ingredient_mapping.py  test_agent_help_skill.py  test_apply_health_effect_aliases.py  test_avoid_existing_health_effect_conflicts.py  test_batch.py  test_build_nutriment_dose_band_table.py  test_claim_proposal.py  test_claim_validation.py  test_combine_internal_exports.py  test_composition_ingredient_health_summary.py  test_composition_ingredient_summary_inputs.py  test_composition_nutriment_summary.py  test_composition_significance.py  test_demo_run.py  test_effects_csv.py  test_fallback_composition.py  test_final_export_inputs.py  test_final_export_merge.py  (+19 more)
scripts/: setup.mjs
src/: index.ts
tests/: test_demo_run.py  test_live_retrieval.py  test_provider_config.py
(+84 files in other folders)
