[project]
name = "sipz-nutrient-agent"
version = "0.1.0"
description = "A local-first nutrient and bioactive research agent that produces Supabase-ready CSV output with quote-grounded audit artifacts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["agent", "nutrition", "bioactives", "citations", "quote-grounding", "csv"]
dependencies = [
  "orjson>=3.10.7",
  "pydantic>=2.9.2",
  "python-dotenv>=1.0.1",
  "rich>=13.8.1",
  "typer>=0.12.5",
]

[project.scripts]
sipz-agent = "sipz_agent.cli:app"
sipz-nutrient-agent = "sipz_agent.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sipz_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
