[project]
name = "sipz-nutrient-agent"
version = "1.0.0"
description = "An auditable literature-research agent for human health effects of orally consumed substances."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sipz" }]
keywords = ["agent", "nutrition", "bioactives", "citations", "quote-grounding", "csv"]
dependencies = [
  "orjson>=3.10.7",
  "playwright>=1.60.0",
  "pydantic>=2.9.2",
  "pypdf>=6.12.2",
  "python-dotenv>=1.0.1",
  "rich>=13.8.1",
  "typer>=0.12.5",
]

[project.urls]
Homepage = "https://github.com/wbsipz/sipz-nutrient-agent"
Repository = "https://github.com/wbsipz/sipz-nutrient-agent"
Issues = "https://github.com/wbsipz/sipz-nutrient-agent/issues"

[project.scripts]
sipz-agent = "sipz_agent.cli:app"
sipz-nutrient-agent = "sipz_agent.cli:app"
sipz-internal = "sipz_agent.cli_internal:app"
sipz-ingredients = "sipz_agent.cli_ingredients:app"

[dependency-groups]
dev = [
  "pytest>=8.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/src/sipz_agent"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
pythonpath = ["python/src"]

[tool.ruff]
line-length = 100
target-version = "py311"
